--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,11 @@
 
-Main developer
+Main developer (Jingo)
 ==============
 
 Claudio Cicali <claudio.cicali@gmail.com>
 http://ccl.me
 
-Noteworthy contributors
+Noteworthy contributors (Jingo)
 =======================
 
 David McFadzean (static assets management) https://github.com/macterra
